# ci-triage

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: scheduled.yml
src/ci_triage/: __init__.py  classifier.py  cli.py  config.py  github_client.py  reporting.py  signing.py  triage.py
tests/: test_classifier.py  test_config.py  test_github_client.py  test_reporting.py  test_signing.py  test_triage.py
